# neurovolume

./: .gitignore  .gitmodules  :w  BRANCH_GOALS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  build.zig  build.zig.zon  go.mod  go.sum  pyproject.toml  sanity.py  skull_strip_roto.aep  test_import.py  tui_vol_viewer.py  write_ndarray.py
.devcontainer/: Dockerfile  neurovolume_deps.txt
.github/: CODEOWNERS
.github/workflows/: CI.yml  publish.yml
.helix/: config.toml  languages.toml
blender/: fmri_vdb_from_numpy.blend  fmri_vdb_from_numpy.blend1  multigrid.blend  multigrid.blend1  scivolLoad.blend  scivolLoad.blend1  vdb_from_numpy.blend  vdb_from_numpy.blend1
blender_plugin/: __init__.py  blender_manifest.toml  neurovolume_lib.py  testing.py
cache/: .gitignore
cmd/neurovolume/: main  main.go
examples/: README.md  nibabel_example.py
media/: .gitignore  info.txt
media/sub-01/: .gitignore
neurovolume/: README.md  pyproject.toml
neurovolume/src/neurovolume/: core.py
neurovolume/tests/: test_core.py
neurovolume_jl/nvjl/: Manifest.toml  Project.toml  test.ipynb
output/: .gitignore
pkg/audio/: audio.go
pkg/nifti/: nifti.go
pkg/open/: Nifti1.go  gzip.go
pkg/read_nifti/: nifti.go
pkg/render/: render.go
pkg/utils/: utils.go
pkg/vdb/: acknowedgements.md  vdb.go
pkg/volume/: acknowledgements.md  combine.go  edit.go  interpolate.go  interpolation.go  openGzip.go  openNifti1.go  transform.go  volume.go
python/: __init__.py  import_test.py  neurovolume_lib.py  nibabel_example.py  testing.py
python_library/: nibabel_example.py
python_scratch/: netCDF.py  pydap_test.py  test.nc
src/: CSV.zig  c_root.zig  config.zig.zon  debug.zig  demo_temp.zig  field_test.zig  main.zig  netCDF4.zig  nifti1.zig  path.zig  root.zig  save.zig  test.zig  test_patterns.zig  test_utils.zig  tests_deprecated.zig  tree_test.zig  util.zig  utils.zig  vdb.zig  vdb543.zig  volume.zig
src/blender_scripts/: anatomy_vdb_from_np.py  fmri_vdb_seq.py  load_data.py  multigrid.py  scivol_load.py  (+2 more)
tests/: test_core.py  test_integration.py
(+78 files in other folders)
