[project]
name = "neurovolume"
version = "0.1.0a6"
description = "Python library for Neurovolume. Build VDBs for scientific visualizations"
readme = "README.md"
authors = [
    { name = "joachimbbp", email = "jbbpfefferkorn@gmail.com" }
]
# developed using 3.14 but blender 5.0.0 uses 3.11.13,
requires-python = ">=3.11.13" 
dependencies = [
    "numpy>=1.26,<2.0", # Match blener 5.0.0
    "pytest>=9.0.1",
    "ziglang>=0.15.1",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"


