[project]
name = "neurovolume"
version = "0.1.0a15"
description = "Python library for Neurovolume. Build VDBs for scientific visualizations"
readme = "README.md"
authors = [
    { name = "joachimbbp", email = "jbbpfefferkorn@gmail.com" }
]
requires-python = ">=3.14" 
dependencies = [
    "nibabel>=5.4.0",
    "numpy>=1.26.4",
    "pytest>=9.0.1",
    "ziglang>=0.15.2",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
