[project]
name = "neurovolume"
version = "0.1.0"
description = "Python library for Neurovolume. Build VDBs for scientific visualizations"
readme = "README.md"
authors = [
    { name = "joachimbbp", email = "104856283+joachimbbp@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
